[tool.poetry]
name = "deepops-ansible-role-users"
version = "0.1.0"
description = ""
authors = ["Leo Gallucci <elgalu3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible-lint = "^5.0.12"
ansible = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
